Fix the nav layout
The links were not aligned with the header logo.
I expanded the container to 1024px for a more
nice looking.

--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@ a {
 }
 
 .container {
-    max-width: 760px;
+    max-width: 1024px;
 }
 
 header {
@@ -31,6 +31,7 @@ header {
 .nav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin: 0 auto;
 }
 
